--- a/app/css/style.css
+++ b/app/css/style.css
@@ -264,6 +264,8 @@ a:focus {
   z-index: 1; }
   .header__logo {
     margin-right: 10px; }
+    .header__logo img {
+      max-height: 30px; }
   .header__menu {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
@@ -603,10 +605,12 @@ a:focus {
         vertical-align: bottom; }
 
 table {
-  width: 100%; }
+  width: 100%;
+  border-collapse: separate; }
 
-.table-main tr:nth-child(even) .table-main__cell {
-  background-color: #fff; }
+.table-main tbody tr:nth-child(even) .table-main__cell {
+  background-color: #fff;
+  display: table-cell; }
 
 .table-main__cell {
   background-color: #f7f7f7;
@@ -634,7 +638,7 @@ table {
     .table-description__cell-heading_empty {
       height: 180px; }
   .table-description__cell-main {
-    display: table-cell;
+    margin: 0;
     position: relative; }
     .table-description__cell-main_heading {
       vertical-align: bottom; }
@@ -650,7 +654,7 @@ table {
       background: url("../images/information.png") no-repeat center center; }
   .table-description__cell-footer {
     display: block;
-    margin: 43px 0 27px;
+    margin: 43px 0 29px;
     color: #535353;
     font-family: "ProximaNovaR", sans-serif;
     text-transform: uppercase;
